# COMIC_BOOK_READING_-PLATFORM-

./: README.md  insert_admin.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  db.py  init_db.py  requirements.txt  run.py
app/queries/: admin_queries.py  auth_queries.py  chapter_queries.py  comic_queries.py
app/routes/: admin_routes.py  auth_routes.py  comic_routes.py
app/services/: auth_service.py
app/static/: style.css
app/templates/: admin_home.html  info.html  login.html  publisher_chapters.html  publisher_edit.html  publisher_home.html  reader_comic.html  reader_home.html  reader_no_content.html  register.html
app/utils/: upload_utils.py
docs/: Comic book platform database design.mhtml  comic_platform_database.sql  documentation.txt  generate_pdf.py
